Add response message

--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/login/forgot-password/forgot-password.component.css
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/login/forgot-password/forgot-password.component.css
@@ -6,6 +6,16 @@ main {
   position: relative;
 }
 
+.bg-image {
+  background-image: url(../../../../assets/img/forgot-password.png);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 100%;
+  filter: blur(50px);
+  transform: scaleX(-1);
+}
+
 mat-card {
   height: 500px;
   width: 1000px;
@@ -62,4 +72,19 @@ img {
   top: 50%;
   left: 75%;
   transform: translate(-50%, -50%);
+}
+
+::ng-deep .successMessage > .mdc-snackbar__surface {
+  background-color: #6DB154 !important;
+}
+
+::ng-deep .failMessage > .mdc-snackbar__surface {
+  background-color: #F96C57 !important;
+}
+
+mat-spinner {
+  display: inline-block;
+  height: 30px !important;
+  width: 30px !important;
+  color: white !important;
 }
