--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/login/forgot-password/forgot-password.component.html
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/login/forgot-password/forgot-password.component.html
@@ -1,4 +1,5 @@
 <main>
+    <div class="bg-image"></div>
     <mat-card class="row">
         <div class="col-6">
             <h6 id="company-name">FinancialPlanning</h6>
@@ -8,11 +9,11 @@
                     <mat-card-subtitle>No worries, we'll send you reset instructions.</mat-card-subtitle>
                 </mat-card-header>
                 <mat-card-content>
-                    <form class="w-100 mb-3">
+                    <form class="w-100 mb-3" (ngSubmit)="onSubmit()">
                         <mat-form-field class="w-100 mb-2">
                             <mat-label>Email</mat-label>
                             <input matInput type="email" placeholder="Ex. user@mail.com"
-                                [formControl]="emailFormControl" [errorStateMatcher]="matcher" />
+                                [formControl]="emailFormControl" [errorStateMatcher]="matcher"/>
                             @if (emailFormControl.hasError('email') && !emailFormControl.hasError('required')) {
                             <mat-error>Please enter a valid email address</mat-error>
                             }
