design import layout

--- a/FinancialPlaningUI/FinancialPlaning/src/app/components/sidenav/sidenav.component.css
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/components/sidenav/sidenav.component.css
@@ -1,6 +1,6 @@
 #sidenav {
   position: fixed;
-  background: #1B1A55;
+  background: #222044;
   width: 70px;
   height: 100vh;
   padding-top: 1px;
