--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/terms/term-details/term-details.component.html
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/terms/term-details/term-details.component.html
@@ -1,6 +1,6 @@
 <main>
     <h1>Term details</h1>
-    <div class="doc-info mb-5">
+    <div class="doc-info mb-5 card">
         <form [formGroup]="termForm" (ngSubmit)="onSubmit()">
             <div class="row">
                 <div class="col-6">
