--- a/FinancialPlaningUI/FinancialPlaning/src/styles.css
+++ b/FinancialPlaningUI/FinancialPlaning/src/styles.css
@@ -1,6 +1,7 @@
 body {
   font-family: 'Lato', Candara, Calibri, Segoe, Segoe UI, Optima, Arial, sans-serif;
-  background-color: #070F2B;
+  background-color: #17152D;
+  
   color: white;
 }
 
