--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/terms/term-details/term-details.component.css
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/terms/term-details/term-details.component.css
@@ -8,14 +8,19 @@ form .col-6 {
     /* Set column width to 50% */
 }
 
+h1 {
+    font-weight: bolder;
+}
 form input,
 form select {
     /* border: 2px solid #575757   ; */
-    /* border-radius: 4px; */
+    border-radius: 20px;
     /* width: 60%; */
     border: 0;
     height: 50px;
     padding: 0 15px;
+    background-color: #3E6AC2;
+    
 }
 
 
@@ -23,6 +28,11 @@ form select {
     position: relative;
 }
 
+.card{
+    background-color: #222143;
+    color: white;
+    height: 80%;
+}
 
 table {
     text-align: center;
@@ -41,7 +51,7 @@ main>div {
 }
 
 main {
-    position: absolute;
+    position: absolute; 
     height: calc(100vh - 120px);
     width: calc(100vw - 100px);
     max-height: calc(100vh - 120px);
