--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/terms/terms.component.css
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/terms/terms.component.css
@@ -141,3 +141,8 @@ td {
   text-rendering: auto;
   -webkit-font-smoothing: antialiased;
 }
+.emtry-data-message{
+  text-align: center;
+  font-size: large;
+  margin-top: 15%;
+}
