--- a/FinancialPlaningUI/FinancialPlaning/src/app/components/upload/upload.component.html
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/components/upload/upload.component.html
@@ -7,24 +7,19 @@
     <i class="fas fa-cloud-upload-alt"></i>
     <p>Browse File to Upload</p>
   </form>
-</div>
 
-<div *ngIf="file">
-  <section class="file-info">
-    File details:
-    <ul>
-      <li>Name: {{file.name}}</li>
-      <li>Type: {{file.type}}</li>
-      <li>Size: {{file.size}} bytes</li>
-    </ul>
-  </section>
-
-  <button (click)="onUpload()">Upload the file</button>
-
-  <section [ngSwitch]="status">
-    <p *ngSwitchCase="'uploading'">⏳ Uploading...</p>
-    <p *ngSwitchCase="'success'">✅ Done!</p>
-    <p *ngSwitchCase="'fail'">❌ Error!</p>
-    <p *ngSwitchDefault>😶 Waiting to upload...</p>
-  </section>
+  <div *ngIf="file">
+    <section class="uploaded-area">
+      <li class="row">
+        <div class="content upload">
+          <i class="fas fa-file-alt"></i>
+          <div class="details">
+            <span class="name">{{file.name}}</span>
+            <span class="size">{{ (file.size / 1024) | number:'1.2-2' }} KB</span>
+          </div>
+        </div>
+        <!-- <i class="fas fa-check"></i> -->
+      </li>
+    </section>
+  </div>
 </div>
