--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/report/report-details/report-details.component.html
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/report/report-details/report-details.component.html
@@ -1,1 +1,52 @@
-<p>report-details works!</p>
+<main>
+
+<table mat-table [dataSource]="dataSource" class="mat-elevation-z8" >
+
+    <ng-container matColumnDef="No">
+        <th mat-header-cell *matHeaderCellDef> No. </th>
+        <td mat-cell *matCellDef="let element"> {{element.no}} </td>
+      </ng-container>
+  
+    <ng-container matColumnDef="Expense">
+        <th mat-header-cell *matHeaderCellDef> Expense </th>
+        <td mat-cell *matCellDef="let element"> {{element.expenseName}} </td>
+      </ng-container>
+
+    <ng-container matColumnDef="CostType">
+      <th mat-header-cell *matHeaderCellDef> Cost type </th>
+      <td mat-cell *matCellDef="let element"> {{element.costType}} </td>
+    </ng-container>
+    <ng-container matColumnDef="Unit Price (VND)">
+        <th mat-header-cell *matHeaderCellDef> Unit Price (VND) </th>
+        <td mat-cell *matCellDef="let element"> {{element.unitPrice|  number:'1.0-0'}} </td>
+     </ng-container>
+     <ng-container matColumnDef="Total">
+        <th mat-header-cell *matHeaderCellDef> Total (VND) </th>
+        <td mat-cell *matCellDef="let element"> {{element.unitPrice * element.amount }} </td>
+     </ng-container>
+     <ng-container matColumnDef="Amount">
+        <th mat-header-cell *matHeaderCellDef> Amount </th>
+        <td mat-cell *matCellDef="let element"> {{element.totalAmount}} </td>
+     </ng-container>
+     <ng-container matColumnDef="Project name">
+        <th mat-header-cell *matHeaderCellDef> Project name </th>
+        <td mat-cell *matCellDef="let element"> {{element.projectName}} </td>
+     </ng-container>
+     <ng-container matColumnDef="Supplier name">
+        <th mat-header-cell *matHeaderCellDef> Project name </th>
+        <td mat-cell *matCellDef="let element"> {{element.supplierName}} </td>
+     </ng-container>
+     <ng-container matColumnDef="PIC">
+        <th mat-header-cell *matHeaderCellDef>PIC </th>
+        <td mat-cell *matCellDef="let element"> {{element.pic}} </td>
+     </ng-container>
+     <ng-container matColumnDef="Notes">
+        <th mat-header-cell *matHeaderCellDef>Notes </th>
+        <td mat-cell *matCellDef="let element"> {{element.note}} </td>
+     </ng-container>
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  
+  </table>
+      
+</main>
