--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/users/user-list/user-list.component.css
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/users/user-list/user-list.component.css
@@ -1,38 +1,177 @@
-body{
-    background: #edf1f5;
-    margin-top:20px;
-}
-.card {
+main {
+    position: absolute;
+    height: 100vh;
+    width: calc(100vw - 100px);
+    max-height: 100vh;
+    max-width: calc(100vw - 100px);
+    left: 80px;
+    padding: 30px;
+    background-color: #070f2b;
+  }
+  
+  .container {
     position: relative;
+  }
+  
+  h6 {
+    font-size: smaller;
+  }
+  
+  div:has(#page-title) {
     display: flex;
-    flex-direction: column;
-    min-width: 0;
-    word-wrap: break-word;
-    background-color: #fff;
-    background-clip: border-box;
-    border: 0 solid transparent;
-    border-radius: 0;
-}
-.btn-circle.btn-lg, .btn-group-lg>.btn-circle.btn {
-    width: 50px;
-    height: 50px;
-    padding: 14px 15px;
-    font-size: 18px;
-    line-height: 23px;
-}
-.text-muted {
-    color: #8898aa!important;
-}
-[type=button]:not(:disabled), [type=reset]:not(:disabled), [type=submit]:not(:disabled), button:not(:disabled) {
-    cursor: pointer;
-}
-.btn-circle {
-    border-radius: 100%;
-    width: 40px;
-    height: 40px;
+  }
+  
+  button {
+    background: #535c91;
+    border: none;
+  }
+  
+  #create-button {
+    position: absolute;
+    top: 50%;
+    right: 0;
+    transform: translateY(-50%);
+  }
+  
+  #create-button > button {
+    color: white;
+    padding: 10px 20px;
+    border-radius: 10px;
+  }
+  
+  #create-button i {
+    margin-right: 10px;
+  }
+  
+  #status-filter {
+    border-bottom: 1px solid #1b1a55;
+  }
+  
+  #status-filter > button {
     padding: 10px;
-}
-.user-table tbody tr .category-select {
-    max-width: 150px;
-    border-radius: 20px;
-}
+    background-color: #070f2b;
+    color: #9290c3;
+    width: 125px;
+    font-size: small;
+  }
+  
+  #status-filter > .chosen {
+    border-bottom: 4px solid #9290c3;
+    color: white;
+  }
+  
+  .searchBar {
+    position: relative;
+  }
+  
+  .searchBar input[type="text"] {
+    width: 50%;
+    line-height: 2.5;
+    padding: 0px 35px;
+    border: 1px solid #9290c3;
+    border-radius: 10px;
+    background-color: #070f2b;
+    color: white;
+  }
+  
+  .searchBar .fa-search {
+    position: absolute;
+    top: 50%;
+    left: 10px;
+    transform: translateY(-50%);
+    cursor: pointer;
+    color: #9290c3;
+  }
+  
+  table {
+    width: 100%;
+    min-height: auto;
+    background-color: #070f2b;
+    border: 1px solid #9290c3;
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+    overflow: hidden !important;
+    box-shadow: 0px -5px 2px -4px #9290c3;
+    flex-shrink: 0;
+  }
+  
+  th {
+    border-bottom: 1px solid #1b1a55;
+    color: white;
+  }
+  
+  td {
+    border-top: 1px solid #535c91;
+    color: #9290c3;
+  }
+  
+  ::ng-deep .mat-mdc-paginator {
+    border-bottom-left-radius: 20px;
+    border-bottom-right-radius: 20px;
+    overflow: hidden;
+  }
+  
+  ::ng-deep .mat-mdc-paginator-outer-container {
+    background-color: #535c91;
+    color: white;
+  }
+  
+  ::ng-deep .success .mdc-snackbar__label::before {
+    font-family: "Font Awesome 6 free"; 
+      font-weight: 400;
+    content: '\f058';
+  }
+  
+  ::ng-deep .success .mdc-snackbar__label {
+    color: #16ff00 !important;
+  }
+  
+  ::ng-deep .fail .mdc-snackbar__label::before {
+    font-family: "Font Awesome 6 free"; 
+      font-weight: 400;
+    content: '\f057';
+  }
+  
+  ::ng-deep .fail .mdc-snackbar__label {
+    color: #ff204e !important;
+  }
+  
+  ::ng-deep .mdc-snackbar__label {
+    display: inline-block;
+    text-rendering: auto;
+    -webkit-font-smoothing: antialiased;
+  }
+  .emtry-data-message{
+    text-align: center;
+    font-size: large;
+    margin-top: 15%;
+  }
+  .search-container {
+    display: flex;
+    align-items: center;
+  }
+  
+  .custom-select {
+    flex: 1; /* Số tự nhiên là phần tử `<select>` chiếm mọi không gian còn lại */
+    margin-right: 10px; /* Khoảng cách giữa phần tử `<select>` và `<button>` */
+    padding: 8px 12px;
+    font-size: 16px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    background-color: #fff;
+    color: #333;
+    outline: none;
+    cursor: pointer;
+  }
+  
+  .custom-button {
+    padding: 10px 20px;
+    font-size: 16px;
+    border: none;
+    border-radius: 4px;
+    background-color: #007bff;
+    color: #fff;
+    cursor: pointer;
+  }
+  
+  
