--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/users/user-list/user-list.component.html
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/users/user-list/user-list.component.html
@@ -1,82 +1,65 @@
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
-    integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css"
-    integrity="sha512-5A8nwdMOWrSz20fDsjczgUidUBR8liPYU+WymTZP1lmY9G6Oc7HlZv156XqnsgNUzTyMefFTcsFH/tnJE/+xBg=="
-    crossorigin="anonymous" referrerpolicy="no-referrer" />
 <link rel="stylesheet" href="user-list.component.css">
-<h1>User List</h1>
-
-
-<div class="container">
-    <div class="mt-3">
-        <a routerLink="/add-user"><button  class="btn btn-primary">Add User</button></a>
+<main>
+  <div class="container mb-4">
+    <div id="page-title">
+      <h3><b>Users management</b></h3>
+      <h6>User List</h6>
     </div>
-    <div class="row">
-        <div class="col-md-12">
-            <div class="card">
-                <div class="card-body">
-                    <h5 class="card-title text-uppercase mb-0">Manage Users</h5>
-                    <div class="form-outline mt-3">
-                    </div>
-                </div>
-                <div class="form-outline mt-3">
-                    <input type="text" class="form-control" placeholder="Search by username" [(ngModel)]="searchQuery">
-                </div>
-                
-                <div>
-                    <select [(ngModel)]="selectedRole" (change)="filterUsers()">
-                      <option value="">All Roles</option>
-                      <option *ngFor="let role of roles" [value]="role">{{ role }}</option>
-                    </select>
-                  </div>
-                <div class="table-responsive">
-
-                    <table class="table no-wrap user-table mb-0">
-
-                        <thead>
-                            <tr>
-                                <th scope="col" class="border-0 text-uppercase font-medium pl-4">#</th>
-                                <th scope="col" class="border-0 text-uppercase font-medium">Name</th>
-                                <th scope="col" class="border-0 text-uppercase font-medium">Email</th>
-                                <th scope="col" class="border-0 text-uppercase font-medium">Department</th>
-                                <th scope="col" class="border-0 text-uppercase font-medium">Position</th>
-                                <th scope="col" class="border-0 text-uppercase font-medium">Action</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr *ngFor="let item of userList | search: searchQuery | paginate: { itemsPerPage:5, currentPage: p } let i = index ">
-                               
-                                <td class="pl-4">{{i+1}}</td>
-                                <td>
-                                    <h5 class="font-medium mb-0">{{item.username}}</h5>
-                                </td>
-                                <td>
-                                    <h5 class="font-medium mb-0">{{item.email}}</h5>
-                                </td>
-                                <td>
-                                    <h5 class="font-medium mb-0">{{item.departmentName}}</h5>
-                                </td>
-                                <td>
-                                    <h5 class="font-medium mb-0">{{item.positionName}}</h5>
-                                </td>
-                                <td>
-                                    <button type="button" class="btn btn-outline-info btn-circle btn-lg     "><i
-                                            class="fa fa-eye"></i> </button>
-                                    <button type="button"
-                                        class="btn btn-outline-info btn-circle btn-lg btn-circle ml-2"><i
-                                            class="fa fa-trash"></i> </button>
-                                    <button type="button"
-                                        class="btn btn-outline-info btn-circle btn-lg btn-circle ml-2"><i
-                                            class="fa fa-edit" (click)="edit(item.id)"></i> </button>
-                                </td>
-                            </tr>
-                        </tbody>
-                    </table>
-                    <div class="paginate">
-                          <pagination-controls (pageChange)="p = $event"></pagination-controls>
-                    </div>
-                </div>
-            </div>
-        </div>
+    <a routerLink="/add-user" id="create-button">
+      <button><i class="fa-solid fa-plus"></i> Add</button>
+    </a>
+  </div>
+  <div class="mb-4">
+    <div class="searchBar">
+      <i class="fa-solid fa-search"></i>
+      <input type="text" [(ngModel)]="searchValue" placeholder="Search by username">
+      <select class="custom-select" [(ngModel)]="selectedRole">
+        <option value="">All Roles</option>
+        <option *ngFor="let role of roles" [value]="role">{{ role }}</option>
+      </select>
+      <button class="custom-button" (click)="search()">Search</button>
     </div>
-</div>
+  </div>
+
+  <table mat-table [dataSource]="dataSource" class="mat-elevation-z8" [hidden]="userList.length == 0">
+    <ng-container matColumnDef="index">
+      <th mat-header-cell *matHeaderCellDef>No.</th>
+      <td mat-cell *matCellDef="let row; let rowIndex = index">{{rowIndex + 1}}</td>
+    </ng-container>
+    <ng-container matColumnDef="username">
+      <th mat-header-cell *matHeaderCellDef>UserName</th>
+      <td mat-cell *matCellDef="let user">{{user.username}}</td>
+    </ng-container>
+    <ng-container matColumnDef="email">
+      <th mat-header-cell *matHeaderCellDef>Email</th>
+      <td mat-cell *matCellDef="let user">{{user.email}}</td>
+    </ng-container>
+    <ng-container matColumnDef="department">
+      <th mat-header-cell *matHeaderCellDef>Department</th>
+      <td mat-cell *matCellDef="let user">{{user.departmentName}}</td>
+    </ng-container>
+    <ng-container matColumnDef="position">
+      <th mat-header-cell *matHeaderCellDef>Position</th>
+      <td mat-cell *matCellDef="let user">{{user.positionName}}</td>
+    </ng-container>
+    <ng-container matColumnDef="action">
+      <th mat-header-cell *matHeaderCellDef>Action</th>
+      <td mat-cell *matCellDef="let user">
+        <a [routerLink]=""><mat-icon>visibility</mat-icon></a>
+        <a [routerLink]="['/edit-user/', user.id]"><mat-icon>edit</mat-icon></a>
+      </td>
+    </ng-container>
+    <tr mat-header-row *matHeaderRowDef="columnHeaders"></tr>
+    <tr mat-row *matRowDef="let row; columns: columnHeaders; let rowIndex = index;"></tr>
+  </table>
+  
+  
+  <div *ngIf="userList.length == 0" class="empty-data-message">
+    No items match your credentials, please try again.
+  </div>
+  <mat-paginator [length]="listSize" [pageSize]="pageSize" [pageIndex]="pageIndex" (page)="onPageChange($event)">
+  </mat-paginator>
+</main>
+<footer>
+  <!-- Your footer content goes here -->
+</footer>
