--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/plans/plans.component.css
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/plans/plans.component.css
@@ -9,6 +9,31 @@ main {
   background-color: #070f2b;
 }
 
+.container1 {
+  align-items: center;
+}
+
+.searchBar {
+  flex: 1; /* Ô tìm kiếm sẽ mở rộng để lấp đầy không gian còn trống */
+  position: relative;
+  width: 100%;
+  margin-right: 10px; /* Khoảng cách giữa ô tìm kiếm và các ô filter */
+}
+
+mat-form-field {
+  flex: 1; /* Tất cả các ô filter sẽ có cùng kích thước */
+  margin-right: 10px; /* Khoảng cách giữa các ô filter */
+}
+
+.reset-button {
+  background-color: #535c91;
+  color: white;
+  border: none;
+  border-radius: 10px;
+  padding: 10px 20px;
+  cursor: pointer;
+}
+
 .container {
   position: relative;
 }
@@ -26,46 +51,35 @@ button {
   border: none;
 }
 
-#create-button {
+
+.btIP {
   position: absolute;
   top: 50%;
   right: 0;
   transform: translateY(-50%);
 }
 
-#create-button > button {
+.btIP button {
   color: white;
   padding: 10px 20px;
   border-radius: 10px;
-}
-
-#create-button i {
   margin-right: 10px;
 }
 
-#status-filter {
-  border-bottom: 1px solid #1b1a55;
+.btIP i {
+  margin-right: 10px;
 }
 
-#status-filter > button {
-  padding: 10px;
-  background-color: #070f2b;
-  color: #9290c3;
-  width: 125px;
-  font-size: small;
-}
 
-#status-filter > .chosen {
-  border-bottom: 4px solid #9290c3;
-  color: white;
-}
 
 .searchBar {
   position: relative;
+ display: inline;
 }
 
 .searchBar input[type="text"] {
-  width: 50%;
+  width: 40%;
+
   line-height: 2.5;
   padding: 0px 35px;
   border: 1px solid #9290c3;
@@ -116,28 +130,47 @@ td {
   color: white;
 }
 
-::ng-deep .success .mdc-snackbar__label::before {
-  font-family: "Font Awesome 6 free"; 
-	font-weight: 400;
-  content: '\f058';
+::ng-deep .mat-mdc ::ng-deep .mat-mdc-form-field {
+  height: 50px;
 }
 
-::ng-deep .success .mdc-snackbar__label {
-  color: #16ff00 !important;
+::ng-deep  .mat-mdc-text-field-wrapper{
+  margin-top: 20px !important;
 }
 
-::ng-deep .fail .mdc-snackbar__label::before {
-  font-family: "Font Awesome 6 free"; 
-	font-weight: 400;
-  content: '\f057';
+::ng-deep .mdc-text-field--filled:not(.mdc-text-field--disabled){
+  background-color: #070f2b  !important;
+  border: 1px solid #9290c3;
+  border-radius: 10px;
+  
 }
 
-::ng-deep .fail .mdc-snackbar__label {
-  color: #ff204e !important;
+::ng-deep .mat-mdc-select-arrow {
+  color: white !important;
 }
 
-::ng-deep .mdc-snackbar__label {
-  display: inline-block;
-  text-rendering: auto;
-  -webkit-font-smoothing: antialiased;
+::ng-deep .mat-mdc-form-field-infix {
+ 
+  width: 100px !important;
+}
+
+::ng-deep .mdc-text-field--filled .mdc-floating-label {
+ 
+  font-size: 14px !important;
+  
+}
+::ng-deep  .mat-mdc-select {
+  color: white !important;
+  font-size: 14px !important;
+}
+::ng-deep .mat-mdc-form-field {
+ 
+  margin-left: 30px;
+
+}
+
+.emtry-data-message{
+  text-align: center;
+  font-size: large;
+  margin-top: 15%;
 }
