--- a/FinancialPlaningUI/FinancialPlaning/src/app/components/upload/upload.component.css
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/components/upload/upload.component.css
@@ -20,7 +20,7 @@ body {
 
 .wrapper {
     width: 430px;
-    background: #4F85F2;
+    /* background: #4F85F2; */
     border-radius: 5px;
     padding: 30px;
     box-shadow: 7px 7px 12px rgba(0, 0, 0, 0.05);
