--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/plans/import-plan/import-plan.component.html
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/plans/import-plan/import-plan.component.html
@@ -1,33 +1,34 @@
 <main>
   <h1 class="mb-4">Import Plan</h1>
-  <div class="card row">
+  <h5>Step 1/2: Please select a file to import</h5>
+  <div class="card">
+    <form>
+      <p>
+        <label for="term">Term *</label>
+      </p>
+      <mat-form-field appearance="fill">
+        <mat-label>Term</mat-label>
+        <mat-select disableOptionCentering panelClass="dropDown-seasons-panel" id="term">
+          <mat-option disabled selected>Please select term</mat-option>
+          <mat-option *ngFor="let option of termOptions" [value]="option.value">
+            {{option.viewValue}}
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
+      <input type="file" id="file-input" hidden (change)="onFileSelected($event)" />
+    </form>
     
-    <div class="left">
-      <h5>Step 1/2: Please select a file to import</h5>
-      <form>
-        <p>
-          <label for="term">Term *</label>
-        </p>
-        <mat-form-field appearance="fill">
-          <mat-label>Term</mat-label>
-          <mat-select disableOptionCentering panelClass="dropDown-seasons-panel" id="term">
-            <mat-option disabled selected>Please select term</mat-option>
-            <mat-option *ngFor="let option of termOptions" [value]="option.value">
-              {{option.viewValue}}
-            </mat-option>
-          </mat-select>
-        </mat-form-field>
-        <input type="file" id="file-input" hidden (change)="onFileSelected($event)" />
-      </form>
-      <button>
-        <span>Back</span>
-      </button>
-      <button>
-        <span>Next</span>
-      </button>
-    </div>
-    <div class="right">
-      <app-upload (fileSelected)="onFileSelected($event)"></app-upload>
+    <app-upload (fileSelected)="onFileSelected($event)"></app-upload>
+    
+    <div>
+      <div class="buttons">
+        <button class="back-button">
+          <span>Back</span>
+        </button>
+        <button class="next-button">
+          <span>Next</span>
+        </button>
+      </div>
     </div>
   </div>
 </main>
