--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/report/report-details/report-details.component.html
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/report/report-details/report-details.component.html
@@ -1,5 +1,18 @@
 <main>
-
+    <div class="container mb-4">
+        <div id="page-title">
+          <h3><b> Monthly Reports</b></h3>
+          <h6>View all Monthly Reports</h6>
+        </div>
+        <div class="abc">
+          <a routerLink="/create-term" class="create-button" >
+            <button> Import</button>
+          </a>
+          <a routerLink="/create-term" class="export-button">
+            <button> Export</button>
+          </a>
+        </div>
+    </div>
 <table mat-table [dataSource]="dataSource" class="mat-elevation-z8" >
 
     <ng-container matColumnDef="No">
@@ -18,16 +31,17 @@
     </ng-container>
     <ng-container matColumnDef="Unit Price (VND)">
         <th mat-header-cell *matHeaderCellDef> Unit Price (VND) </th>
-        <td mat-cell *matCellDef="let element"> {{element.unitPrice|  number:'1.0-0'}} </td>
-     </ng-container>
-     <ng-container matColumnDef="Total">
-        <th mat-header-cell *matHeaderCellDef> Total (VND) </th>
-        <td mat-cell *matCellDef="let element"> {{element.unitPrice * element.amount }} </td>
+        <td mat-cell *matCellDef="let element"> {{element.unitPrice| number:'1.0-0'}} </td>
      </ng-container>
      <ng-container matColumnDef="Amount">
         <th mat-header-cell *matHeaderCellDef> Amount </th>
         <td mat-cell *matCellDef="let element"> {{element.totalAmount}} </td>
      </ng-container>
+     <ng-container matColumnDef="Total">
+        <th mat-header-cell *matHeaderCellDef> Total (VND) </th>
+        <td mat-cell *matCellDef="let element"> {{element.unitPrice * element.amount | number:'1.0-0' }} </td>
+     </ng-container>
+     
      <ng-container matColumnDef="Project name">
         <th mat-header-cell *matHeaderCellDef> Project name </th>
         <td mat-cell *matCellDef="let element"> {{element.projectName}} </td>
