--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/users/user-list/user-list.component.html
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/users/user-list/user-list.component.html
@@ -45,7 +45,7 @@
     <ng-container matColumnDef="action">
       <th mat-header-cell *matHeaderCellDef>Action</th>
       <td mat-cell *matCellDef="let user">
-        <a [routerLink]=""><mat-icon>visibility</mat-icon></a>
+        <a [routerLink]="['/user-detail/', user.id]"><mat-icon>visibility</mat-icon></a>
         <a [routerLink]="['/edit-user/', user.id]"><mat-icon>edit</mat-icon></a>
       </td>
     </ng-container>
