--- a/FinancialPlaningUI/FinancialPlaning/src/app/components/upload/upload.component.css
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/components/upload/upload.component.css
@@ -2,7 +2,6 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-
 }
 
 body {
@@ -19,7 +18,7 @@ body {
 }
 
 .wrapper {
-    width: 430px;
+    /* width: 360px; */
     /* background: #4F85F2; */
     border-radius: 5px;
     padding: 30px;
@@ -37,7 +36,7 @@ body {
     height: 167px;
     display: flex;
     cursor: pointer;
-    margin: 30px 0;
+    /* margin: 30px 0; */
     align-items: center;
     justify-content: center;
     flex-direction: column;
@@ -73,7 +72,8 @@ form p {
 }
 
 section .row {
-    margin-bottom: 10px;
+    margin-top: 20px;
+    /* margin-bottom: 20px; */
     background: #3E6AC2;
     list-style: none;
     padding: 15px 20px;
