--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/plans/import-plan/import-plan.component.css
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/plans/import-plan/import-plan.component.css
@@ -30,27 +30,44 @@ h5 {
     font-weight: 600;
     margin-bottom: 20px;
 }
+
+/* .left {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 30%;
+    height: 100%;
+}
+
+.right {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 70%;
+    height: 100%;
+} */
 .card {
     background-color: #222143;
     color: white;
-    height: 400px;
-    width: 1000px;
+    height: 500px;
+    width: 100%;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     /* left: 50px; */
-    top: 40px;
     /* align-items: center; */
-    justify-content: center;
+    /* justify-content: center; */
 }
 
-/* select {
+select {
     margin: 0 15px;
     border-radius: 20px;
     border: 0;
     height: 50px;
     padding: 0 15px;
     width: 40%;
-} */
+}
 
 .dropDown-seasons-panel {
     border-radius: 10px !important;
@@ -61,8 +78,8 @@ h5 {
 
 form {
     position: relative;
-    width: 300px;
-    padding: 20px;
+    /* width: 360px; */
+    padding: 0 30px 0 30px;
 }
 
 .buttons{
@@ -90,3 +107,28 @@ form {
     border-radius: 10px;
     padding: 10px 20px;
 }
+
+.preview-card {
+    background-color: #222143;
+    color: white;
+    border-radius: 20px;
+    display: flex;
+    flex-direction: column;
+    /* left: 50px; */
+    /* align-items: center; */
+    /* justify-content: center; */
+}
+
+h3 {
+    padding-left: 20px;
+    font-size: 20px;
+    font-weight: 600;
+    margin-bottom: 20px;
+}
+
+/* table {
+    display: inline;
+    text-align: center;
+    overflow:auto;
+    width: 100%;
+} */
