--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/report/report-details/report-details.component.html
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/report/report-details/report-details.component.html
@@ -5,11 +5,11 @@
           <h6>Report Details</h6>
         </div>
         <div class="abc">
-          <a routerLink="/create-term" class="create-button" >
-            <button> Import</button>
-          </a>
-          <a routerLink="/create-term" class="export-button">
+          <a routerLink="/" class="create-button" >
             <button> Export</button>
+          </a>
+          <a routerLink="/" class="export-button">
+            <button> Reup</button>
           </a>
         </div>
     </div>
@@ -71,9 +71,11 @@
         <th mat-header-cell *matHeaderCellDef>Notes </th>
         <td mat-cell *matCellDef="let element"> {{element.note}} </td>
      </ng-container>
+     
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-  
+   
   </table>
-      
+  <mat-paginator [length]="listSize" [pageSize]="pageSize" [pageIndex]="pageIndex" (page)="onPageChange($event)" [hidden]="dataSource.length==0">
+</mat-paginator>   
 </main>
