display list reportVersion

--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/report/report-details/report-details.component.html
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/report/report-details/report-details.component.html
@@ -5,7 +5,7 @@
           <h6>Report Details</h6>
         </div>
         <div class="abc">
-          <a routerLink="/" class="create-button" >
+          <a routerLink="/" class="create-button"  (click)="openReportVersionsDialog()">
             <button> Export</button>
           </a>
           <a routerLink="/" class="export-button">
