--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/report/reportVersions/reportVersions.component.html
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/report/reportVersions/reportVersions.component.html
@@ -2,9 +2,10 @@
 <mat-dialog-content>
     <table mat-table [dataSource]="data" class="mat-elevation-z8">
 
-        <ng-container matColumnDef="Version">
+        <ng-container matColumnDef="Version" >
             <th mat-header-cell *matHeaderCellDef> Version </th>
-            <td mat-cell *matCellDef="let element"> v.{{element.version}} </td>
+            <td mat-cell *matCellDef="let element" style=" text-decoration: underline;  cursor:pointer;">
+                 v.{{element.version}} </td>
         </ng-container>
         <ng-container matColumnDef="Published data">
             <th mat-header-cell *matHeaderCellDef> Published data </th>
