--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/report/report-details/report-details.component.html
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/report/report-details/report-details.component.html
@@ -1,7 +1,7 @@
 <main>
-    <div class="container mb-4">
+    <div class="container mb-4 margin">
         <div id="page-title">
-          <h3><b> Monthly Reports</b></h3>
+          <h4><b> Monthly Reports</b></h4>
           <h6>Report Details</h6>
         </div>
         <div class="abc">
@@ -13,20 +13,26 @@
           </a>
         </div>
     </div>
-    <div *ngIf="report" class="mb-4">
+    <div *ngIf="report" class="mb-4 report-details d-flex justify-content-between" >
      
+      <div>
         <h6>Report: {{report.reportName}}</h6>
         <h6>Term: {{report.termName}}</h6>
         <h6>Month: {{report.month}}</h6>
         <h6>Department: {{report.departmentName}}</h6>
         <h6>Status: {{report.status}}</h6>
-      
+      </div>
+      <div>
         <h6>Uploaded by: {{uploadedBy}}</h6>
         <h6>Report Due Date: {{report.reportDureDate}}</h6>
         <h6>Date: {{report.updateDate}}</h6>
         <h6 class="underline" (click)="openReportVersionsDialog()">Version: v.{{report.version}}</h6>
+       
+      </div>
      
     </div>
+    <div> <h6>Total Expense:{{totalExpense}} </h6>
+      <h6>Biggest Expenditure: {{biggestExpenditure}}</h6></div>
 <table mat-table [dataSource]="dataSource" class="mat-elevation-z8" >
 
     <ng-container matColumnDef="No">
@@ -49,11 +55,11 @@
      </ng-container>
      <ng-container matColumnDef="Amount">
         <th mat-header-cell *matHeaderCellDef> Amount </th>
-        <td mat-cell *matCellDef="let element"> {{element.totalAmount}} </td>
+        <td mat-cell *matCellDef="let element"> {{element.amount}} </td>
      </ng-container>
      <ng-container matColumnDef="Total">
         <th mat-header-cell *matHeaderCellDef> Total (VND) </th>
-        <td mat-cell *matCellDef="let element"> {{element.unitPrice * element.amount | number:'1.0-0' }} </td>
+        <td mat-cell *matCellDef="let element"> {{element.totalAmount| number:'1.0-0' }} </td>
      </ng-container>
      
      <ng-container matColumnDef="Project name">
