--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/plans/import-plan/import-plan.component.html
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/plans/import-plan/import-plan.component.html
@@ -20,14 +20,18 @@
           <input type="file" id="file-input" hidden (change)="onFileSelected($event)" />
         </form>
         <app-upload (fileSelected)="onFileSelected($event)"></app-upload>
-      </div>
-      
+        <div class="buttons">
+          <button class="preview-button" (click)="onImport()">
+            <span>Preview</span>
+          </button>
+        </div>
+      </div> 
     </div>
     <div class="col-lg-8 col-md-12 preview-card">
       <!-- <div class="preview-card"> -->
         <!-- <div class="col-12"> -->
           <h3 class="mb-3">Preview</h3>
-          <form class="row">
+          <!-- <form class="row">
             <div class="col-lg-4 col-md-6 mb-3">
               <label for="term" class="form-label">Term</label>
               <input
@@ -58,93 +62,53 @@
                 disabled
               />
             </div>
-          </form>
+          </form> -->
           <!-- Data table -->
-          <div class="row">
-            <!-- <div class="table-responsive"> -->
-              <table class="table table-responsive">
-                <thead>
-                    <th class="col">Expense</th>
-                    <th class="col">Cost Type</th>
-                    <th class="col">Unit Price(VND)</th>
-                    <th class="col">Amount</th>
-                    <th class="col">Total(VND)</th>
-                    <th class="col">Project Name</th>
-                    <th class="col">Supplier Name</th>
-                    <th class="col">PIC</th>
-                    <th class="col">Notes</th>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>Promotion event</td>
-                        <td>Direct cost</td>
-                        <td>200,000,000</td>
-                        <td>3</td>
-                        <td>600,000,000</td>
-                        <td>IN22</td>
-                        <td>Internal</td>
-                        <td>AnhMN2</td>
-                        <td>N/A</td>
-                    </tr>
-                    <tr>
-                        <td>Promotion event</td>
-                        <td>Direct cost</td>
-                        <td>200,000,000</td>
-                        <td>3</td>
-                        <td>600,000,000</td>
-                        <td>IN22</td>
-                        <td>Internal</td>
-                        <td>AnhMN2</td>
-                        <td>N/A</td>
-                    </tr>
-                    <tr>
-                        <td>Promotion event</td>
-                        <td>Direct cost</td>
-                        <td>200,000,000</td>
-                        <td>3</td>
-                        <td>600,000,000</td>
-                        <td>IN22</td>
-                        <td>Internal</td>
-                        <td>AnhMN2</td>
-                        <td>N/A</td>
-                    </tr>
-                    <tr>
-                        <td>Promotion event</td>
-                        <td>Direct cost</td>
-                        <td>200,000,000</td>
-                        <td>3</td>
-                        <td>600,000,000</td>
-                        <td>IN22</td>
-                        <td>Internal</td>
-                        <td>AnhMN2</td>
-                        <td>N/A</td>
-                    </tr>
-                    <tr>
-                        <td>Promotion event</td>
-                        <td>Direct cost</td>
-                        <td>200,000,000</td>
-                        <td>3</td>
-                        <td>600,000,000</td>
-                        <td>IN22</td>
-                        <td>Internal</td>
-                        <td>AnhMN2</td>
-                        <td>N/A</td>
-                    </tr>
-                    <tr>
-                        <td>Promotion event</td>
-                        <td>Direct cost</td>
-                        <td>200,000,000</td>
-                        <td>3</td>
-                        <td>600,000,000</td>
-                        <td>IN22</td>
-                        <td>Internal</td>
-                        <td>AnhMN2</td>
-                        <td>N/A</td>
-                    </tr>
-                </tbody>
-              </table>
+          <div class="table mat-elevation-z8">
+            <table mat-table [dataSource]="dataSource" class="">
+              <ng-container matColumnDef="expense">
+                <th mat-header-cell *matHeaderCellDef> Expense </th>
+                <td mat-cell *matCellDef="let element"> {{element.expense}} </td>
+              </ng-container>
+              <ng-container matColumnDef="costType">
+                <th mat-header-cell *matHeaderCellDef> Cost Type </th>
+                <td mat-cell *matCellDef="let element"> {{element.costType}} </td>
+              </ng-container>
+              <ng-container matColumnDef="unitPrice">
+                <th mat-header-cell *matHeaderCellDef> Unit Price(VND) </th>
+                <td mat-cell *matCellDef="let element"> {{element.unitPrice}} </td>
+              </ng-container>
+              <ng-container matColumnDef="amount">
+                <th mat-header-cell *matHeaderCellDef> Amount </th>
+                <td mat-cell *matCellDef="let element"> {{element.amount}} </td>
+              </ng-container>
+              <ng-container matColumnDef="total">
+                <th mat-header-cell *matHeaderCellDef> Total(VND) </th>
+                <td mat-cell *matCellDef="let element"> {{element.total}} </td>
+              </ng-container>
+              <ng-container matColumnDef="projectName">
+                <th mat-header-cell *matHeaderCellDef> Project Name </th>
+                <td mat-cell *matCellDef="let element"> {{element.projectName}} </td>
+              </ng-container>
+              <ng-container matColumnDef="supplierName">
+                <th mat-header-cell *matHeaderCellDef> Supplier Name </th>
+                <td mat-cell *matCellDef="let element"> {{element.supplierName}} </td>
+              </ng-container>
+              <ng-container matColumnDef="pic">
+                <th mat-header-cell *matHeaderCellDef> PIC </th>
+                <td mat-cell *matCellDef="let element"> {{element.pic}} </td>
+              </ng-container>
+              <ng-container matColumnDef="notes">
+                <th mat-header-cell *matHeaderCellDef> Notes </th>
+                <td mat-cell *matCellDef="let element"> {{element.notes}} </td>
+              </ng-container>
+        
+              <tr mat-header-row *matHeaderRowDef="columnHeaders"></tr>
+              <tr mat-row *matRowDef="let row; columns: columnHeaders;"></tr>
+            </table>
 
-            <!-- </div> -->
+            <mat-paginator [length]="listSize" [pageSize]="pageSize" [pageIndex]="pageIndex" (page)="onPageChange($event)" [hidden]="dataSource.length==0">
+            </mat-paginator>
           </div>
         <!-- </div> -->
       <!-- </div> -->
