--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/report/report-details/report-details.component.css
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/report/report-details/report-details.component.css
@@ -1,124 +1,135 @@
 main {
-    position: absolute;
-    height: 100vh;
-    width: calc(100vw - 100px);
-    max-height: 100vh;
-    max-width: calc(100vw - 100px);
-    left: 80px;
-    padding: 30px;
-    background-color: #070f2b;
-  }
-  
-  .container {
-    position: relative;
-  }
-  
-  h6 {
-    font-size: smaller;
-  }
-  
-  div:has(#page-title) {
-    display: flex;
-  }
-  
-  button {
-    background: #535c91;
-    border: none;
-  }
-  
-  
-  .abc {
-    position: absolute;
-    top: 50%;
-    right: 0;
-    transform: translateY(-50%);
-  }
-  
-  .abc button {
-    color: white;
-    padding: 10px 20px;
-    border-radius: 10px;
-    margin-right: 10px;
-  }
-  
-  .abc i {
-    margin-right: 10px;
-  }
-  
-  table {
-    width: 100%;
-    min-height: auto;
-    background-color: #070f2b;
-    border: 1px solid #9290c3;
-    border-top-left-radius: 20px;
-    border-top-right-radius: 20px;
-    overflow: hidden !important;
-    box-shadow: 0px -5px 2px -4px #9290c3;
-    flex-shrink: 0;
-  }
-  
-  th {
-    border-bottom: 1px solid #1b1a55;
-    color: white;
-  }
-  
-  td {
-    border-top: 1px solid #535c91;
-    color: #9290c3;
-  }
-  
-  ::ng-deep .mat-mdc-paginator {
-    border-bottom-left-radius: 20px;
-    border-bottom-right-radius: 20px;
-    overflow: hidden;
-  }
-  
-  ::ng-deep .mat-mdc-paginator-outer-container {
-    background-color: #535c91;
-    color: white;
-  }
-  
-  ::ng-deep .mat-mdc ::ng-deep .mat-mdc-form-field {
-    height: 50px;
-  }
-  
-  ::ng-deep  .mat-mdc-text-field-wrapper{
-    margin-top: 20px !important;
-  }
-  
-  ::ng-deep .mdc-text-field--filled:not(.mdc-text-field--disabled){
-    background-color: #070f2b  !important;
-    border: 1px solid #9290c3;
-    border-radius: 10px;
-    
-  }
-  
-  ::ng-deep .mat-mdc-select-arrow {
-    color: white !important;
-  }
-  
-  ::ng-deep .mat-mdc-form-field-infix {
-   
-    width: 100px !important;
-  }
-  
-  ::ng-deep .mdc-text-field--filled .mdc-floating-label {
-   
-    font-size: 14px !important;
-    
-  }
-  .underline {
-    text-decoration: underline;
-    cursor:pointer;
-  }
-  .report-details{
-    width: 70%;
-    margin: auto;
-    display: flex;
-    border-radius: 5px;
-    border: 1px solid white; 
-    padding: 10px; /* Khoảng cách giữa nội dung và border */
-  }
-  .margin {
-    margin-bottom:10px !important;
-  }
+  position: absolute;
+  height: 100vh;
+  width: calc(100vw - 100px);
+  max-height: 100vh;
+  max-width: calc(100vw - 100px);
+  left: 80px;
+  padding: 30px;
+  background-color: #070f2b;
+}
+
+.container {
+  position: relative;
+}
+
+h6 {
+  font-size: smaller;
+}
+
+div:has(#page-title) {
+  display: flex;
+}
+
+button {
+  background: #535c91;
+  border: none;
+}
+
+
+.abc {
+  position: absolute;
+  top: 50%;
+  right: 0;
+  transform: translateY(-50%);
+}
+
+.abc button {
+  color: white;
+  padding: 10px 20px;
+  border-radius: 10px;
+  margin-right: 10px;
+}
+
+.abc i {
+  margin-right: 10px;
+}
+
+table {
+  width: 100%;
+  min-height: auto;
+  background-color: #070f2b;
+  border: 1px solid #9290c3;
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
+  overflow: hidden !important;
+  box-shadow: 0px -5px 2px -4px #9290c3;
+  flex-shrink: 0;
+}
+
+th {
+  border-bottom: 1px solid #1b1a55;
+  color: white;
+}
+
+td {
+  border-top: 1px solid #535c91;
+  color: #9290c3;
+}
+
+::ng-deep .mat-mdc-paginator {
+  border-bottom-left-radius: 20px;
+  border-bottom-right-radius: 20px;
+  overflow: hidden;
+}
+
+::ng-deep .mat-mdc-paginator-outer-container {
+  background-color: #535c91;
+  color: white;
+}
+
+::ng-deep .mat-mdc ::ng-deep .mat-mdc-form-field {
+  height: 50px;
+}
+
+::ng-deep .mat-mdc-text-field-wrapper {
+  margin-top: 20px !important;
+}
+
+::ng-deep .mdc-text-field--filled:not(.mdc-text-field--disabled) {
+  background-color: #070f2b !important;
+  border: 1px solid #9290c3;
+  border-radius: 10px;
+
+}
+
+::ng-deep .mat-mdc-select-arrow {
+  color: white !important;
+}
+
+::ng-deep .mat-mdc-form-field-infix {
+
+  width: 100px !important;
+}
+
+::ng-deep .mdc-text-field--filled .mdc-floating-label {
+
+  font-size: 14px !important;
+
+}
+
+.underline {
+  text-decoration: underline;
+  cursor: pointer;
+}
+
+.report-details {
+  width: 70%;
+  margin: auto;
+  display: flex;
+  border-radius: 5px;
+  border: 1px solid white;
+  margin-bottom: 10px;
+  padding-top: 5px;
+}
+
+.right-item {
+  margin-right: 10%;
+  width: 35%;
+
+}
+
+.left-item {
+  width: 35%;
+  margin-left: 5%;
+}
