user detail edit

--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/users/user-detail/user-detail.component.html
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/users/user-detail/user-detail.component.html
@@ -48,7 +48,7 @@
             </div>
             <div class="choice-container">
                 <!-- Phần tử "Active" -->
-                <div *ngIf="userForm.get('status')?.value === 1" class="status-option text-success">
+                <div *ngIf="userForm.get('status')?.value === 1" class="status-option text-success"style="background-color: #535c91;">
                     <strong  style="font-size: 26px;"> Active</strong> 
                 </div>
                 <!-- Phần tử "Deactive" -->
