--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/plans/import-plan/import-plan.component.html
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/plans/import-plan/import-plan.component.html
@@ -76,9 +76,11 @@
       </div>
       <div>
         <div class="buttons">
-          <button class="back-button">
-            <span>Back</span>
-          </button>
+          <a routerLink="/plans">
+            <button class="back-button">
+              <span>Back</span>
+            </button>
+          </a>
           <button class="submit-button" (click)="onSubmit()">
             <span>Submit</span>
           </button>
