--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/report/list-report/list-report.component.html
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/report/list-report/list-report.component.html
@@ -8,7 +8,7 @@
       <a  [hidden]="(role == 'Accountant')" routerLink="/create-term" class="create-button" >
         <button> Import</button>
       </a>
-      <a routerLink="/create-term" class="export-button">
+      <a routerLink="/import-reports" class="export-button">
         <button> Export</button>
       </a>
     </div>
